# pkglog

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  setup.py
pkglog/: __init__.py  __main__.py  main.py  pkglog.py
pkglog/parsers/: apt.py  dnf.py  pacman.py  xbps.py  zypper.py
scripts/: pkglog
