[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pkglog"
description = "Reports concise log of package changes"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.7"
keywords = ["pacman", "apt-get", "apt", "dnf"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "importlib-metadata; python_version < '3.8'",
]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/pkglog"

[project.scripts]
pkglog = "pkglog.pkglog:main"

[tool.setuptools.packages.find]
exclude = ["logs"]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true
# vim:se sw=2:
